--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,15 @@ body{
     background: #3494E6; 
     background: -webkit-linear-gradient(to left, rgb(243, 201, 222), #3494E6); 
     background: linear-gradient(to left, rgb(229, 196, 213), #3494E6); 
-    font-family: 'Courgette', cursive;
+    /*font-family: 'Courgette', cursive;*/
+    
+
 }
 
 .titular{
-    
-    background: white;
+    font-weight: bold;
+    font-family: 'Courgette', cursive;
+    background: rgb(218, 231, 222);
     background-image: url(img/signo2.png);
     height: 90px;
     width: 35%;
@@ -27,7 +30,8 @@ body{
 }
 
 .cuestionario{
-    background: white;
+    font-family: 'Russo One', sans-serif;
+    background: rgb(218, 231, 222);
     background-image: url(img/signo23.png);
     height: 455px;
     width: 70%;
@@ -44,14 +48,14 @@ body{
 }
 
 .pregunta{
-    padding-top: 6%;
+    padding-top: 9%;
     font-size: 2em;
 }
 
 .respuestas{
     padding-top: 2%;
     margin-bottom: 3%;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: bold;
 }
 
@@ -69,7 +73,6 @@ input{
     margin-top: 3%;
     width: 90px;
     height: 30px;
-    margin-right: 5%;
     font-size: 1.3rem;
     font-weight: bold;
     border-radius: 50%;
@@ -79,33 +82,17 @@ input{
     color: white;
     background-color: rgba(10, 9, 9, 0.8);
     box-shadow: 4px 4px 2px rgb(56, 56, 56), 12px 12px 8px rgb(10, 4, 4);
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
-.previous{
-    font-size: 2.7rem;
-    margin-left: -1%;
-    margin-right: 11%;
-    color: /*rgb(199, 34, 34)*/black;
-    text-shadow: 2px 2px 0 #AAA;
-    opacity: 0.80;    
-    background-color: rgba(131, 5, 5, 0);
-    box-shadow: 6px 6px 2px rgb(56, 56, 56), 12px 12px 8px rgb(10, 4, 4);
-    border-radius: 50%;
-}
-
-.next{
-    font-size: 2.7rem;
-    margin-left: 7%;
-    color: /*rgb(199, 34, 34)*/black;
-    text-shadow: 2px 2px 0 #AAA;
-    opacity: 0.80;    
-    background-color: rgba(131, 5, 5, 0);
-    box-shadow: 6px 6px 2px rgb(56, 56, 56), 12px 12px 8px rgb(10, 4, 4);
-    border-radius: 50%;
+.botones {
+    text-align: center;
 }
 
 
-@media (max-width: 360px){
+
+@media (max-width: 380px){
     *{
         margin: 0%;
         padding: 0%;
@@ -114,27 +101,470 @@ input{
         background: #3494E6; 
         background: -webkit-linear-gradient(to left, rgb(243, 201, 222), #3494E6); 
         background: linear-gradient(to left, rgb(229, 196, 213), #3494E6); 
-        font-family: 'Courgette', cursive;
+        /*font-family: 'Courgette', cursive;*/
+        
+    
     }
     
-    .cajaPregunta{
-        border-radius: 60%;
-        background-image: url(img/signo2.png); 
-        background-color: white;
+    .titular{
+        font-weight: bold;
+        font-family: 'Courgette', cursive;
+        background: rgb(218, 231, 222);
+        background-image: url(img/signo2.png);
+        height: 60px;
+        width: 68%;
         margin: auto;
-        width: 80%;
-        height: 50%;
-        
+        border-radius: 20%;
+        box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
+        text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
+        text-align: center;
+        margin-bottom: 5%;
+        margin-top: 8%;
+        padding-top: 6%;
+        font-size: 1.1rem;
     }
     
     .cuestionario{
-        background:grey;
-        font-size: 0.5rem;
-        height: 70%;
-        width: 70%;
+        font-family: 'Russo One', sans-serif;
+        background:  rgb(218, 231, 222);
+        background-image: url(img/signo23resp.png);
+        height: 455px;
+        width: 75%;
         margin: auto;
         border-radius: 20%;
-    }    
+        box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
+    }
+    
+    .cajaPregunta{ 
+        margin: auto;
+        width: 80%;
+        height: 460px;
+        text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
+    }
+    
+    .pregunta{
+        padding-top: 14%;
+        font-size: 1.1rem;
+        margin-left: 4%;
+    }
+    
+    .respuestas{
+        padding-top: 7%;
+        margin-bottom: 3%;
+        font-size: 0.9rem;
+        font-weight: bold;
+        margin-left: 10%;
+    }
+    
+    .respuestas .res{
+        padding-top: 7%;
+    }
+    
+    .txtRespuesta{
+        font-size: 0.8rem;
+        text-align: center;
+        font-weight: bold;
+        margin-top: 15%;
+    }
+    
+    input{
+        margin-top: 8%;
+        width: 65px;
+        height: 30px;
+        font-size: 1.3rem;
+        font-weight: bold;
+        border-radius: 50%;
+    /*    box-shadow: 2px 2px 0 #AAA, 12px 8px 8px #444;
+        background-color: rgba(255, 255, 255, 0.25);
+        color: rgb(14, 13, 13);*/
+        color: white;
+        background-color: rgba(10, 9, 9, 0.8);
+        box-shadow: 4px 4px 2px rgb(56, 56, 56), 12px 12px 8px rgb(10, 4, 4);
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    
+    .botones {
+        text-align: center;
+    }
 }
 
 
+@media (min-width:381px) and (max-width: 600px){
+    *{
+        margin: 0%;
+        padding: 0%;
+    }
+    body{
+        background: #3494E6; 
+        background: -webkit-linear-gradient(to left, rgb(243, 201, 222), #3494E6); 
+        background: linear-gradient(to left, rgb(229, 196, 213), #3494E6); 
+        
+    }
+    
+    .titular{
+        font-weight: bold;
+        font-family: 'Courgette', cursive;
+        background: rgb(218, 231, 222);
+        background-image: url(img/signo2\ resp700.png);
+        height: 60px;
+        width: 68%;
+        margin: auto;
+        border-radius: 20%;
+        box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
+        text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
+        text-align: center;
+        margin-bottom: 5%;
+        margin-top: 8%;
+        padding-top: 3%;
+        padding-bottom: 2%;
+        font-size: 1.3rem;
+    }
+    
+    .cuestionario{
+        font-family: 'Russo One', sans-serif;
+        background:  rgb(218, 231, 222);
+        background-image: url(img/signo23resp700.png);
+        height: 455px;
+        width: 75%;
+        margin: auto;
+        border-radius: 20%;
+        box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
+    }
+    
+    .cajaPregunta{ 
+        margin: auto;
+        width: 80%;
+        height: 460px;
+        text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
+    }
+    
+    .pregunta{
+        padding-top: 12%;
+        font-size: 1.2rem;
+        margin-left: 4%;
+    }
+    
+    .respuestas{
+        padding-top: 4%;
+        margin-bottom: 3%;
+        font-size: 1rem;
+        font-weight: bold;
+        margin-left: 10%;
+    }
+    
+    .respuestas .res{
+        padding-top: 7%;
+    }
+    
+    .txtRespuesta{
+        font-size: 0.8rem;
+        text-align: center;
+        font-weight: bold;
+        margin-top: 9%;
+        
+    }
+    
+    input{
+        margin-top: 7%;
+        width: 70px;
+        height: 30px;
+        font-size: 1.3rem;
+        font-weight: bold;
+        border-radius: 50%;
+        color: white;
+        background-color: rgba(10, 9, 9, 0.8);
+        box-shadow: 4px 4px 2px rgb(56, 56, 56), 12px 12px 8px rgb(10, 4, 4);
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    
+    .botones {
+        text-align: center;
+    }
+}
+
+@media (min-width:601px) and (max-width: 800px){
+    *{
+        margin: 0%;
+        padding: 0%;
+    }
+    body{
+        background: #3494E6; 
+        background: -webkit-linear-gradient(to left, rgb(243, 201, 222), #3494E6); 
+        background: linear-gradient(to left, rgb(229, 196, 213), #3494E6); 
+        
+    }
+    
+    .titular{
+        font-weight: bold;
+        font-family: 'Courgette', cursive;
+        background: rgb(218, 231, 222);
+        background-image: url(img/signo2\ resp700.png);
+        height: 60px;
+        width: 68%;
+        margin: auto;
+        border-radius: 20%;
+        box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
+        text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
+        text-align: center;
+        margin-bottom: 5%;
+        margin-top: 5%;
+        padding-top: 2%;
+        padding-bottom: 4%;
+        font-size: 1.8rem;
+    }
+    
+    .cuestionario{
+        font-family: 'Russo One', sans-serif;
+        background:  rgb(218, 231, 222);
+        background-image: url(img/signo23resp700.png);
+        height: 455px;
+        width: 75%;
+        margin: auto;
+        border-radius: 20%;
+        box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
+    }
+    
+    .cajaPregunta{ 
+        margin: auto;
+        width: 80%;
+        height: 460px;
+        text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
+    }
+    
+    .pregunta{
+        padding-top: 10%;
+        font-size: 1.5rem;
+        margin-left: 4%;
+    }
+    
+    .respuestas{
+        padding-top: 1%;
+        margin-bottom: 3%;
+        font-size: 1rem;
+        font-weight: bold;
+        margin-left: 10%;
+    }
+    
+    .respuestas .res{
+        padding-top: 7%;
+    }
+    
+    .txtRespuesta{
+        font-size: 0.8rem;
+        text-align: center;
+        font-weight: bold;
+        margin-top: 7%;
+        
+    }
+    
+    input{
+        margin-top: 5%;
+        width: 70px;
+        height: 30px;
+        font-size: 1.2rem;
+        font-weight: bold;
+        border-radius: 50%;
+        color: white;
+        background-color: rgba(10, 9, 9, 0.8);
+        box-shadow: 4px 4px 2px rgb(56, 56, 56), 12px 12px 8px rgb(10, 4, 4);
+        margin-left: 2%;
+        margin-right: 3%;
+    }
+    
+    .botones {
+        text-align: center;
+    }
+
+}
+
+@media (min-width:801px) and (max-width: 1200px){
+    *{
+        margin: 0%;
+        padding: 0%;
+    }
+    body{
+        background: #3494E6; 
+        background: -webkit-linear-gradient(to left, rgb(243, 201, 222), #3494E6); 
+        background: linear-gradient(to left, rgb(229, 196, 213), #3494E6); 
+        
+    }
+    
+    .titular{
+        font-weight: bold;
+        font-family: 'Courgette', cursive;
+        background: rgb(218, 231, 222);
+        background-image: url(img/signo23resp1000tit.png);
+        height: 60px;
+        width: 68%;
+        margin: auto;
+        border-radius: 20%;
+        box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
+        text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
+        text-align: center;
+        margin-bottom: 5%;
+        margin-top: 5%;
+        padding-top: 2%;
+        padding-bottom: 4%;
+        font-size: 2rem;
+    }
+    
+    .cuestionario{
+        font-family: 'Russo One', sans-serif;
+        background:  rgb(218, 231, 222);
+        background-image: url(img/signo23resp1000.png);
+        height: 455px;
+        width: 75%;
+        margin: auto;
+        border-radius: 20%;
+        box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
+    }
+    
+    .cajaPregunta{ 
+        margin: auto;
+        width: 80%;
+        height: 460px;
+        text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
+    }
+    
+    .pregunta{
+        padding-top: 7%;
+        font-size: 1.6rem;
+        margin-left: 4%;
+    }
+    
+    .respuestas{
+        padding-top: 3%;
+        margin-bottom: 3%;
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin-left: 10%;
+    }
+    
+    .respuestas .res{
+        padding-top: 3%;
+    }
+    
+    .txtRespuesta{
+        font-size: 0.9rem;
+        text-align: center;
+        font-weight: bold;
+        margin-top: 7%;
+        
+    }
+    
+    input{
+        margin-top: 4%;
+        width: 75px;
+        height: 30px;
+        font-size: 1.2rem;
+        font-weight: bold;
+        border-radius: 50%;
+        color: white;
+        background-color: rgba(10, 9, 9, 0.8);
+        box-shadow: 4px 4px 2px rgb(56, 56, 56), 12px 12px 8px rgb(10, 4, 4);
+        margin-left: 5%;
+        margin-right: 3%;
+    }
+    
+    .botones {
+        text-align: center;
+    }
+
+}
+/*
+@media (min-width:1000px) and (max-width: 1200px){
+    *{
+        margin: 0%;
+        padding: 0%;
+    }
+    body{
+        background: #3494E6; 
+        background: -webkit-linear-gradient(to left, rgb(243, 201, 222), #3494E6); 
+        background: linear-gradient(to left, rgb(229, 196, 213), #3494E6); 
+        
+    }
+    
+    .titular{
+        font-weight: bold;
+        font-family: 'Courgette', cursive;
+        background: rgb(218, 231, 222);
+        background-image: url(img/signo2\ resp700.png);
+        height: 60px;
+        width: 68%;
+        margin: auto;
+        border-radius: 20%;
+        box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
+        text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
+        text-align: center;
+        margin-bottom: 5%;
+        margin-top: 5%;
+        padding-top: 2%;
+        padding-bottom: 4%;
+        font-size: 1.8rem;
+    }
+    
+    .cuestionario{
+        font-family: 'Russo One', sans-serif;
+        background:  rgb(218, 231, 222);
+        background-image: url(img/signo23resp700.png);
+        height: 455px;
+        width: 75%;
+        margin: auto;
+        border-radius: 20%;
+        box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
+    }
+    
+    .cajaPregunta{ 
+        margin: auto;
+        width: 80%;
+        height: 460px;
+        text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
+    }
+    
+    .pregunta{
+        padding-top: 7%;
+        font-size: 1.6rem;
+        margin-left: 4%;
+    }
+    
+    .respuestas{
+        padding-top: 3%;
+        margin-bottom: 3%;
+        font-size: 1.2rem;
+        font-weight: bold;
+        margin-left: 10%;
+    }
+    
+    .respuestas .res{
+        padding-top: 3%;
+    }
+    
+    .txtRespuesta{
+        font-size: 0.9rem;
+        text-align: center;
+        font-weight: bold;
+        margin-top: 7%;
+        
+    }
+    
+    input{
+        margin-top: 4%;
+        width: 75px;
+        height: 30px;
+        font-size: 1.2rem;
+        font-weight: bold;
+        border-radius: 50%;
+        color: white;
+        background-color: rgba(10, 9, 9, 0.8);
+        box-shadow: 4px 4px 2px rgb(56, 56, 56), 12px 12px 8px rgb(10, 4, 4);
+        margin-left: 5%;
+        margin-right: 3%;
+    }
+    
+    .botones {
+        text-align: center;
+    }
+
+}*/
