--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,9 @@ body{
     margin-top: 2%;
     padding-top: 0.5%;
     font-size: 2rem;
+    animation-duration: 2s;
+    animation-delay: 2s;
+    animation-iteration-count: infinite;
 }
 
 .cuestionario{
@@ -38,6 +41,7 @@ body{
     margin: auto;
     border-radius: 20%;
     box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
+    animation-delay: 2s;
 }
 
 .cajaPregunta{ 
@@ -102,8 +106,6 @@ input{
         background: -webkit-linear-gradient(to left, rgb(243, 201, 222), #3494E6); 
         background: linear-gradient(to left, rgb(229, 196, 213), #3494E6); 
         /*font-family: 'Courgette', cursive;*/
-        
-    
     }
     
     .titular{
@@ -118,8 +120,8 @@ input{
         box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
         text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
         text-align: center;
-        margin-bottom: 5%;
-        margin-top: 8%;
+        margin-bottom: 4%;
+        margin-top: 6%;
         padding-top: 6%;
         font-size: 1.1rem;
     }
@@ -129,7 +131,7 @@ input{
         background:  rgb(218, 231, 222);
         background-image: url(img/signo23resp.png);
         height: 455px;
-        width: 75%;
+        width: 80%;
         margin: auto;
         border-radius: 20%;
         box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
