--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ input{
 
 
 
-@media (max-width: 380px){
+@media (max-width: 410px){
     *{
         margin: 0%;
         padding: 0%;
@@ -111,7 +111,7 @@ input{
     .titular{
         font-weight: bold;
         font-family: 'Courgette', cursive;
-        background: rgb(218, 231, 222);
+        background: rgba(255, 252, 252, 0.5);
         background-image: url(img/signo2.png);
         height: 60px;
         width: 68%;
@@ -120,18 +120,18 @@ input{
         box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
         text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
         text-align: center;
-        margin-bottom: 4%;
+        margin-bottom: 8%;
         margin-top: 6%;
         padding-top: 6%;
         font-size: 1.1rem;
     }
     
     .cuestionario{
-        font-family: 'Russo One', sans-serif;
-        background:  rgb(218, 231, 222);
+        font-family: 'Rubik Mono One', sans-serif;
+        background-color: rgba(255, 252, 252, 0.5);
         background-image: url(img/signo23resp.png);
-        height: 455px;
-        width: 80%;
+        height: 425px;
+        width: 82%;
         margin: auto;
         border-radius: 20%;
         box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
@@ -140,22 +140,24 @@ input{
     .cajaPregunta{ 
         margin: auto;
         width: 80%;
-        height: 460px;
+        height: 425px;
         text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
     }
     
     .pregunta{
         padding-top: 14%;
-        font-size: 1.1rem;
+        padding-bottom: 5%;
+        font-size: 1.3rem;
         margin-left: 4%;
     }
     
     .respuestas{
-        padding-top: 7%;
-        margin-bottom: 3%;
+        padding-top: 0%;
+        margin-bottom: 10%;
         font-size: 0.9rem;
         font-weight: bold;
         margin-left: 10%;
+
     }
     
     .respuestas .res{
@@ -166,19 +168,16 @@ input{
         font-size: 0.8rem;
         text-align: center;
         font-weight: bold;
-        margin-top: 15%;
+        margin-top: 5%;
     }
     
     input{
         margin-top: 8%;
-        width: 65px;
+        width: 70px;
         height: 30px;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         font-weight: bold;
         border-radius: 50%;
-    /*    box-shadow: 2px 2px 0 #AAA, 12px 8px 8px #444;
-        background-color: rgba(255, 255, 255, 0.25);
-        color: rgb(14, 13, 13);*/
         color: white;
         background-color: rgba(10, 9, 9, 0.8);
         box-shadow: 4px 4px 2px rgb(56, 56, 56), 12px 12px 8px rgb(10, 4, 4);
@@ -189,10 +188,13 @@ input{
     .botones {
         text-align: center;
     }
+    .cajaBotones{
+        border-top: 3px dotted black;
+    }
 }
 
 
-@media (min-width:381px) and (max-width: 600px){
+@media (min-width:411px) and (max-width: 600px){
     *{
         margin: 0%;
         padding: 0%;
