--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ input{
 
 
 
-@media (max-width: 410px){
+@media (max-width: 450px){
     *{
         margin: 0%;
         padding: 0%;
@@ -142,6 +142,7 @@ input{
         width: 80%;
         height: 425px;
         text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
+        
     }
     
     .pregunta{
@@ -194,7 +195,7 @@ input{
 }
 
 
-@media (min-width:411px) and (max-width: 600px){
+@media (min-width:451px) and (max-width: 600px){
     *{
         margin: 0%;
         padding: 0%;
@@ -209,7 +210,7 @@ input{
     .titular{
         font-weight: bold;
         font-family: 'Courgette', cursive;
-        background: rgb(218, 231, 222);
+        background-color: rgba(255, 252, 252, 0.5);
         background-image: url(img/signo2\ resp700.png);
         height: 60px;
         width: 68%;
@@ -218,8 +219,8 @@ input{
         box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
         text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
         text-align: center;
-        margin-bottom: 5%;
-        margin-top: 8%;
+        margin-bottom: 12%;
+        margin-top: 10%;
         padding-top: 3%;
         padding-bottom: 2%;
         font-size: 1.3rem;
@@ -227,9 +228,9 @@ input{
     
     .cuestionario{
         font-family: 'Russo One', sans-serif;
-        background:  rgb(218, 231, 222);
+        background-color: rgba(255, 252, 252, 0.5);
         background-image: url(img/signo23resp700.png);
-        height: 455px;
+        height: 415px;
         width: 75%;
         margin: auto;
         border-radius: 20%;
@@ -239,13 +240,13 @@ input{
     .cajaPregunta{ 
         margin: auto;
         width: 80%;
-        height: 460px;
+        height: 415px;
         text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
     }
     
     .pregunta{
         padding-top: 12%;
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         margin-left: 4%;
     }
     
@@ -262,25 +263,26 @@ input{
     }
     
     .txtRespuesta{
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         text-align: center;
         font-weight: bold;
         margin-top: 9%;
-        
+        padding-top: 5%;
+        border-top: 2px dotted black;
     }
     
     input{
         margin-top: 7%;
-        width: 70px;
+        width: 50px;
         height: 30px;
-        font-size: 1.3rem;
+        font-size: 1rem;
         font-weight: bold;
         border-radius: 50%;
         color: white;
         background-color: rgba(10, 9, 9, 0.8);
         box-shadow: 4px 4px 2px rgb(56, 56, 56), 12px 12px 8px rgb(10, 4, 4);
-        margin-left: 5%;
-        margin-right: 5%;
+        margin-left: 2%;
+        margin-right: 2%;
     }
     
     .botones {
@@ -303,7 +305,7 @@ input{
     .titular{
         font-weight: bold;
         font-family: 'Courgette', cursive;
-        background: rgb(218, 231, 222);
+        background-color: rgba(255, 252, 252, 0.5);
         background-image: url(img/signo2\ resp700.png);
         height: 60px;
         width: 68%;
@@ -321,7 +323,7 @@ input{
     
     .cuestionario{
         font-family: 'Russo One', sans-serif;
-        background:  rgb(218, 231, 222);
+        background-color: rgba(255, 252, 252, 0.5);
         background-image: url(img/signo23resp700.png);
         height: 455px;
         width: 75%;
@@ -339,14 +341,14 @@ input{
     
     .pregunta{
         padding-top: 10%;
-        font-size: 1.5rem;
+        font-size: 1.7rem;
         margin-left: 4%;
     }
     
     .respuestas{
         padding-top: 1%;
         margin-bottom: 3%;
-        font-size: 1rem;
+        font-size: 1.2rem;
         font-weight: bold;
         margin-left: 10%;
     }
@@ -356,10 +358,12 @@ input{
     }
     
     .txtRespuesta{
-        font-size: 0.8rem;
+        font-size: 1rem;
         text-align: center;
         font-weight: bold;
         margin-top: 7%;
+        padding-top: 5%;
+        border-top: 2px dotted black;
         
     }
     
@@ -398,17 +402,17 @@ input{
     .titular{
         font-weight: bold;
         font-family: 'Courgette', cursive;
-        background: rgb(218, 231, 222);
+        background-color: rgba(255, 252, 252, 0.5);
         background-image: url(img/signo23resp1000tit.png);
-        height: 60px;
-        width: 68%;
+        height: 55px;
+        width: 63%;
         margin: auto;
         border-radius: 20%;
         box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
         text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
         text-align: center;
-        margin-bottom: 5%;
-        margin-top: 5%;
+        margin-bottom: 4%;
+        margin-top: 4%;
         padding-top: 2%;
         padding-bottom: 4%;
         font-size: 2rem;
@@ -416,9 +420,9 @@ input{
     
     .cuestionario{
         font-family: 'Russo One', sans-serif;
-        background:  rgb(218, 231, 222);
+        background-color: rgba(255, 252, 252, 0.5);
         background-image: url(img/signo23resp1000.png);
-        height: 455px;
+        height: 491px;
         width: 75%;
         margin: auto;
         border-radius: 20%;
@@ -428,48 +432,49 @@ input{
     .cajaPregunta{ 
         margin: auto;
         width: 80%;
-        height: 460px;
+        height: 491px;
         text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
     }
     
     .pregunta{
         padding-top: 7%;
-        font-size: 1.6rem;
+        font-size: 2rem;
         margin-left: 4%;
     }
     
     .respuestas{
         padding-top: 3%;
         margin-bottom: 3%;
-        font-size: 1.2rem;
+        font-size: 1.6rem;
         font-weight: bold;
         margin-left: 10%;
     }
     
     .respuestas .res{
-        padding-top: 3%;
+        padding-top: 1%;
     }
     
     .txtRespuesta{
-        font-size: 0.9rem;
+        font-size: 1.3rem;
         text-align: center;
         font-weight: bold;
         margin-top: 7%;
-        
+        padding-top: 5%;
+        border-top: 2px dotted black;        
     }
     
     input{
-        margin-top: 4%;
-        width: 75px;
-        height: 30px;
+        margin-top: 3%;
+        width: 95px;
+        height: 40px;
         font-size: 1.2rem;
         font-weight: bold;
         border-radius: 50%;
         color: white;
         background-color: rgba(10, 9, 9, 0.8);
         box-shadow: 4px 4px 2px rgb(56, 56, 56), 12px 12px 8px rgb(10, 4, 4);
-        margin-left: 5%;
-        margin-right: 3%;
+        margin-left: 2%;
+        margin-right: 2%;
     }
     
     .botones {
@@ -477,98 +482,3 @@ input{
     }
 
 }
-/*
-@media (min-width:1000px) and (max-width: 1200px){
-    *{
-        margin: 0%;
-        padding: 0%;
-    }
-    body{
-        background: #3494E6; 
-        background: -webkit-linear-gradient(to left, rgb(243, 201, 222), #3494E6); 
-        background: linear-gradient(to left, rgb(229, 196, 213), #3494E6); 
-        
-    }
-    
-    .titular{
-        font-weight: bold;
-        font-family: 'Courgette', cursive;
-        background: rgb(218, 231, 222);
-        background-image: url(img/signo2\ resp700.png);
-        height: 60px;
-        width: 68%;
-        margin: auto;
-        border-radius: 20%;
-        box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
-        text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
-        text-align: center;
-        margin-bottom: 5%;
-        margin-top: 5%;
-        padding-top: 2%;
-        padding-bottom: 4%;
-        font-size: 1.8rem;
-    }
-    
-    .cuestionario{
-        font-family: 'Russo One', sans-serif;
-        background:  rgb(218, 231, 222);
-        background-image: url(img/signo23resp700.png);
-        height: 455px;
-        width: 75%;
-        margin: auto;
-        border-radius: 20%;
-        box-shadow: 2px 2px 0 #AAA, 6px 6px 2px #777, 12px 12px 8px #444;
-    }
-    
-    .cajaPregunta{ 
-        margin: auto;
-        width: 80%;
-        height: 460px;
-        text-shadow: 2px 2px 0 white, 6px 6px 2px #777, 12px 12px 8px rgb(117, 116, 116);
-    }
-    
-    .pregunta{
-        padding-top: 7%;
-        font-size: 1.6rem;
-        margin-left: 4%;
-    }
-    
-    .respuestas{
-        padding-top: 3%;
-        margin-bottom: 3%;
-        font-size: 1.2rem;
-        font-weight: bold;
-        margin-left: 10%;
-    }
-    
-    .respuestas .res{
-        padding-top: 3%;
-    }
-    
-    .txtRespuesta{
-        font-size: 0.9rem;
-        text-align: center;
-        font-weight: bold;
-        margin-top: 7%;
-        
-    }
-    
-    input{
-        margin-top: 4%;
-        width: 75px;
-        height: 30px;
-        font-size: 1.2rem;
-        font-weight: bold;
-        border-radius: 50%;
-        color: white;
-        background-color: rgba(10, 9, 9, 0.8);
-        box-shadow: 4px 4px 2px rgb(56, 56, 56), 12px 12px 8px rgb(10, 4, 4);
-        margin-left: 5%;
-        margin-right: 3%;
-    }
-    
-    .botones {
-        text-align: center;
-    }
-
-}*/
